# 3LM-Translater

./: .gitignore  Cargo.toml  NOTICE.md  README.md  build_app.py  config.yaml  fonts.yaml  i18n.yaml
assets/: icon.icns
python_bridge/: engine.py  requirements.txt  setup_wizard.py
src/: build.rs  gui.rs  main.rs  tts_engine.rs
